# agent

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/collectors/: metric_collector.cpp  metric_collector.h
src/core/: types.h
src/transport/: http_client.cpp  http_client.h
